fixed text sizing and scroll handling on palette as well as piano spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -124,14 +124,14 @@ h2 {
 }
 
 #piano {
-  transform: translateX(0.75%);
+  /* transform: translateX(0.75%); */
 }
 
 #piano path {
   pointer-events: all;
 }
 
-section#piano > svg:nth-child(1) {
+/* section#piano > svg:nth-child(1) {
   margin-left: 1%;
 }
 
@@ -153,7 +153,7 @@ section#piano > svg:nth-child(5) {
 
 section#piano > svg:nth-child(6) {
   transform: translateX(-6%);
-}
+} */
 
 .C,
 .D,
