--- a/src/css/output.css
+++ b/src/css/output.css
@@ -545,14 +545,14 @@ h2 {
 }
 
 #piano {
-  transform: translateX(0.75%);
+  /* transform: translateX(0.75%); */
 }
 
 #piano path {
   pointer-events: all;
 }
 
-section#piano > svg:nth-child(1) {
+/* section#piano > svg:nth-child(1) {
   margin-left: 1%;
 }
 
@@ -574,7 +574,7 @@ section#piano > svg:nth-child(5) {
 
 section#piano > svg:nth-child(6) {
   transform: translateX(-6%);
-}
+} */
 
 .C,
 .D,
@@ -617,7 +617,7 @@ section.chord_picker > ul > li {
 }
 
 section.chord_picker > ul > li.chord-active {
-  box-shadow: -1px 2px 1px var(--bg-main);
+  box-shadow: -1px 2px 1px var(--bg-focus);
   filter: contrast(100%);
 }
 
